\name{NEWS}
\title{News for Package 'rawDiag'}

\section{Changes until version 0.0.8 (2018-07-24)}{
  \itemize{
	  \item bugfix \url{https://github.com/fgcz/rawDiag/issues/29}.
	  \item bugfix \url{https://github.com/fgcz/rawDiag/issues/28}.
	  \item bugfix \url{https://github.com/fgcz/rawDiag/issues/27}.
	  \item scanType mapping for easier facetting of plots.
  }
}

\section{Changes until version 0.0.5 (2018-06-02)}{
  \itemize{
	  \item added \code{readScans} and \code{readXICs}. this allows LFQ and MS2 validation using the \url{https://CRAN.R-project.org/package=protViz}.
  }
}

\section{Changes until version 0.0.2 (2018-04-27)}{
improvements concerning \href{https://pubs.acs.org/journal/jprobs}{JPR}
submission (pr-2018-001736) reviewer comments:

  \itemize{
	  \item added \code{as.rawDiag.mzR} - include support for all major vendors
	  through using open file standards. 
	  \href{https://github.com/protViz/rawDiag/issues/9}{#9}
  }
}