@@ -1,7 +1,7 @@
 Package: rawDiag
 Type: Package
 Title: Diagnostic Plots for Mass Spectrometry Data
-Version: 0.0.14
+Version: 0.0.15
 Authors@R: c(person("Christian", "Panse", email = "cp@fgcz.ethz.ch", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1975-3064")),
 	person("Christian", "Trachsel", email = "Christian.Trachsel@fgcz.ethz.ch", role = "aut", "cre"))
 Author: Christian Trachsel [aut, cre]
