@@ -16,7 +16,9 @@ export(PlotTicBasepeak)
 export(as.rawDiag)
 export(as.rawDiag.mzR)
 export(calc.cycle.time)
+export(extractPromegaXIC)
 export(fillNAgaps)
+export(getPromega6x5mix)
 export(is.rawDiag)
 export(mgf)
 export(plot.XIC)
